# Multi_imu_PCB

./: CLAUDE.md  Cargo.toml  README.md  REFACTOR_PLAN.md  hxy.html  readme.md  rust-toolchain.toml  tokmas.html
.cargo/: config.toml
.claude/: settings.local.json
apps/esp32c3-board/: Cargo.toml  build.rs
apps/esp32c3-board/.cargo/: config.toml
apps/esp32c3-board/src/: board.rs  main.rs
contrib/bmi270/: README.md
contrib/fusion/: Fusion.h  FusionAhrs.c  FusionCalibration.h  FusionMath.h  FusionOffset.c  FusionOffset.h
crates/imu-core/: Cargo.toml
crates/imu-core/src/: bus.rs  driver.rs  lib.rs  protocol.rs  resource.rs  sample.rs  types.rs
crates/imu-drivers/: Cargo.toml
crates/imu-drivers/src/: bmi270.rs  hxy42688.rs  icm42688.rs  lib.rs  lsm6.rs  qmi8658.rs
crates/imu-firmware/: Cargo.toml
crates/imu-firmware/src/: device.rs  lib.rs  resources.rs  runtime.rs  transport.rs
crates/imu-fusion/: Cargo.toml  build.rs
crates/imu-fusion/src/: lib.rs
crates/imu-platform-esp/: Cargo.toml  build.rs
crates/imu-platform-esp/src/: bus.rs  lib.rs  resources.rs
docs/: README.md  architecture.md  diagnostic-report.md  fusion-integration-plan.md  gpui-viewer-plan.md  hardware.md  project-guide.md  refactor-plan.md  sensor-identification.md  test-plan.md  troubleshooting.md
tools/imu-viewer/: Cargo.toml
tools/imu-viewer/src/: main.rs
tools/serial-open-check/: Cargo.toml
tools/serial-open-check/src/: main.rs
