[workspace]
members = [
  "crates/imu-core",
  "crates/imu-drivers",
  "crates/imu-fusion",
  "crates/imu-firmware",
  "crates/imu-platform-esp",
  "apps/esp32c3-board",
  "tools/serial-open-check",
  "tools/imu-viewer",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
cobs = { version = "0.3.0", default-features = false }
cc = "1.2.57"
crc32fast = { version = "1.4.2", default-features = false }
defmt = "1.0.1"
eframe = "0.33.0"
egui = "0.33.0"
egui_plot = "0.34.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-hal = "1.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt"] }
esp-hal = { version = "~1.0", features = ["defmt", "unstable"] }
esp-println = { version = "0.16", default-features = false }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp-alloc", "esp-radio"] }
heapless = { version = "0.7.17", features = ["serde"] }
postcard = { version = "1.1.3", default-features = false, features = ["heapless"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
serde-json-core = "0.6.0"
serialport = "4.8.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
