[package]
name = "imu-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["binary"]
binary = ["dep:cobs", "dep:crc32fast", "dep:postcard"]
json = ["dep:serde-json-core"]
std-json = ["std", "dep:serde_json"]
std = []

[dependencies]
cobs = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }
heapless.workspace = true
postcard = { workspace = true, optional = true }
serde.workspace = true
serde-json-core = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
