[package]
name = "imu-platform-esp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["esp32c3"]
esp32c3 = ["dep:esp-hal", "dep:esp-println", "dep:esp-rtos", "dep:esp-bootloader-esp-idf", "esp-hal/esp32c3", "esp-println/esp32c3", "esp-rtos/esp32c3", "esp-bootloader-esp-idf/esp32c3"]

[dependencies]
embassy-time.workspace = true
embedded-hal.workspace = true
esp-bootloader-esp-idf = { workspace = true, optional = true }
esp-hal = { workspace = true, optional = true }
esp-println = { workspace = true, optional = true, features = ["defmt-espflash", "uart"] }
esp-rtos = { workspace = true, optional = true }
imu-core = { path = "../imu-core", default-features = false }

[build-dependencies]
